chore: depoloy function using terraform
[#165526703]

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"SLACK_WEBHOOK_URL":"https://hooks.slack.com/services/XXX"}
+{"SLACK_WEBHOOK_URL":"https://hooks.slack.com/services/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"}
