fix tests and add them to build pipeline

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'ci']
+
 - name: hashicorp/terraform
   args: ['init']
   dir: 'terraform'
