--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -1,5 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'
+  args: ['install']
+
+- name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'ci']
 
 - name: hashicorp/terraform
