--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -17,3 +17,4 @@ steps:
   - 'TF_VAR_region=${_GCP_REGION}'
   - 'TF_VAR_project=$PROJECT_ID'
   - 'TF_VAR_github_token=${_GITHUB_TOKEN}'
+  - 'TF_VAR_slack_webhook_url=${_SLACK_WEBHOOK_URL}'
