--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "devDependencies": {
     "async": "^2.6.2",
-    "mocha": "6.1.1",
-    "nyc": "^13.3.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.0",
+    "serverless-google-cloudfunctions": "^2.3.2",
     "should": "13.2.3",
-    "sinon": "^7.3.0",
-    "serverless-google-cloudfunctions": "^2.3.2"
+    "sinon": "^7.3.0"
   },
   "author": "Philmod <philippe.modard@gmail.com>",
   "license": "Apache-2.0"
